[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptguard-ci"
version = "0.1.0"
description = "A CLI & GitHub Action to run LLM prompt tests defined in YAML and fail on regressions or toxicity."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer",
  "PyYAML",
  "openai",
  "perspective",
  "python-dotenv",
]

[project.scripts]
promptguard = "promptguard.cli:app"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

# ------------ Key Section Below ------------
# Instruct setuptools to include everything under promptguard/
[tool.setuptools.packages]
find = { where = ["."], include = ["promptguard*"] }
